implement theme mode switcher

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -29,6 +29,9 @@
   .background-light800_dark300 {
     @apply bg-light-800 dark:bg-dark-300 !important;
   }
+  .background-transparent {
+    @apply bg-transparent dark:bg-transparent;
+  }
   .text-dark100_light900 {
     @apply text-dark-100 dark:text-light-900 !important;
   }
