implement basic home page ui

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -152,7 +152,7 @@
   }
 
   .body-medium {
-    @apply text-[14px] font-medium leading-[18.2px];
+    @apply text-[14px] font-medium leading-[18.2px] !important;
   }
 
   .body-semibold {
@@ -196,7 +196,7 @@
   }
 
   .primary-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%) !important;
   }
 
   .dark-gradient {
@@ -204,6 +204,6 @@
       232deg,
       rgba(23, 28, 35, 0.41) 0%,
       rgba(19, 22, 28, 0.7) 100%
-    ); 
+    ) !important; 
   }
 }
